# ORB-SAM-E

./: UBUNTU_SETUP.md
efficientsam3_arm/: pyproject.toml
efficientsam3_ros2/: README.md  VM_SETUP.md  package.xml  setup.cfg  setup.py
efficientsam3_ros2/config/: dynamic_filter.yaml
efficientsam3_ros2/efficientsam3_ros2/: __init__.py  dynamic_filter_node.py  filter_core.py
efficientsam3_ros2/launch/: slam_pipeline.launch.py
efficientsam3_ros2/scripts/: deploy_to_vm.sh
efficientsam3_ros2/test/: test_filter_core.py
ros2_orb_slam3/: CMakeLists.txt
ros2_orb_slam3/include/ros2_orb_slam3/: common.hpp
ros2_orb_slam3/scripts/: download_tum_dataset.sh  mono_driver_filtered_node.py  tum_driver_node.py
ros2_orb_slam3/src/: common.cpp
